<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="24dp">

    <view
        android:id="@+id/line_bar"
        class="android.view.View"
        android:layout_width="48dp"
        android:layout_height="4dp"
        android:layout_marginTop="28dp"
        android:background="#5A87BB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageBank"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/android"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/line_bar" />

    <TextView
        android:id="@+id/tvBankName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="#788095"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/imageBank"
        app:layout_constraintStart_toStartOf="@id/imageBank"
        app:layout_constraintTop_toBottomOf="@id/imageBank"
        tools:text="ICICI" />

    <TextView
        android:id="@+id/tvAccountNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="#788095"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/tvBankName"
        app:layout_constraintStart_toStartOf="@id/tvBankName"
        app:layout_constraintTop_toBottomOf="@id/tvBankName"
        tools:text="************3165" />

    <TextView
        android:id="@+id/tvEnterAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/enter_transaction_password"
        android:textColor="#243257"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAccountNumber" />

    <com.nishant.customview.views.MyEditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="32dp"
        android:drawableStart="@drawable/ic_baseline_search_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tvEnterAmount"
        app:layout_constraintTop_toBottomOf="@id/tvEnterAmount"
        app:password="true" />

    <TextView
        android:id="@+id/tvDisclaimer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/transaction_password_disclaimer"
        app:layout_constraintEnd_toEndOf="@id/etPassword"
        app:layout_constraintStart_toStartOf="@id/etPassword"
        app:layout_constraintTop_toBottomOf="@id/etPassword" />

    <com.nishant.customview.views.BottomSheetButton
        android:id="@+id/btnConfirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/confirm"
        app:layout_constraintEnd_toEndOf="@id/tvDisclaimer"
        app:layout_constraintStart_toStartOf="@id/tvDisclaimer"
        app:layout_constraintTop_toBottomOf="@id/tvDisclaimer" />
</androidx.constraintlayout.widget.ConstraintLayout>